--- a/tweet_analysis/templates/base.html
+++ b/tweet_analysis/templates/base.html
@@ -22,9 +22,7 @@
                         <div class="navbar nav_title" style="border: 0;">
                             <a href="index.html" class="site_title"><span>Tweet Analysis</span></a>
                         </div>
-
                         <div class="clearfix"></div>
-
                         <!-- menu profile quick info -->
                         <div class="profile clearfix">
                             <div class="profile_info">
@@ -40,7 +38,7 @@
                             <div class="menu_section">
                                 <h3>General</h3>
                                 <ul class="nav side-menu">
-                                    <li><a href="#"><i class="fa fa-home"></i> ホーム </a></li>
+                                    <li><a href="{% url 'index' %}"><i class="fa fa-home"></i> ホーム </a></li>
                                     <li><a><i class="fa fa-user"></i> アカウント <span class="fa fa-chevron-down"></span></a>
                                         <ul class="nav child_menu">
                                             <li><a href="#">ユーザ登録</a></li>
@@ -60,38 +58,37 @@
                                 <h3>Link</h3>
                                 <ul class="nav side-menu">
                                     <li><a href="#"><i class="fa fa-github"></i> GitHub </a></li>
-                                    <li><a><i class="fa fa-link"></i> IDチェッカー </a>
-                                    </div>
-                                </div>
-                                <!-- /sidebar menu -->
-
-                                <!-- /menu footer buttons -->
-                                <div class="sidebar-footer hidden-small">
-                                    <a data-toggle="tooltip" data-placement="top" title="Settings">
-                                        <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-                                    </a>
-                                    <a data-toggle="tooltip" data-placement="top" title="FullScreen">
-                                        <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
-                                    </a>
-                                </div>
-                                <!-- /menu footer buttons -->
+                                    <li><a href="https://lab.syncer.jp/Tool/Twitter-ID-Checker/"><i class="fa fa-link"></i> IDチェッカー </a></li>
+                                </ul>
                             </div>
                         </div>
-                    </div>
-                    <div class="right_col" role="main">
-                        {% block content %}
-                        {% endblock %}
-                    </div>
-                    <!-- footer content -->
-                    <footer>
-                        <div class="pull-right">
-                            Gentelella - Bootstrap Admin Template by <a href="https://colorlib.com">Colorlib</a>
+                        <!-- /sidebar menu -->
+
+                        <!-- /menu footer buttons -->
+                        <div class="sidebar-footer hidden-small">
+                            <a data-toggle="tooltip" data-placement="top" title="Settings">
+                                <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+                            </a>
+                            <a data-toggle="tooltip" data-placement="top" title="FullScreen">
+                                <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
+                            </a>
                         </div>
-                        <div class="clearfix"></div>
-                    </footer>
-                    <!-- /footer content -->
+                        <!-- /menu footer buttons -->
+                    </div>
                 </div>
             </div>
+            <div class="right_col" role="main">
+                {% block content %}
+                {% endblock %}
+            </div>
+            <!-- footer content -->
+            <footer>
+                <div class="pull-right">
+                    Gentelella - Bootstrap Admin Template by <a href="https://colorlib.com">Colorlib</a>
+                </div>
+                <div class="clearfix"></div>
+            </footer>
+            <!-- /footer content -->
         </div>
         <script src="{% static 'vendors/jquery/dist/jquery.min.js' %}"></script>
         <script src="{% static 'vendors/bootstrap/dist/js/bootstrap.min.js' %}"></script>
