--- a/tweet_analysis/templates/base.html
+++ b/tweet_analysis/templates/base.html
@@ -43,6 +43,7 @@
                                         <ul class="nav child_menu">
                                             <li><a href="#">ユーザ登録</a></li>
                                             <li><a href="{% url 'account_add' %}">Twitterアカウント登録</a></li>
+                                            <li><a href="{% url 'oauth_add' %}">認証キー登録</a></li>
                                         </ul>
                                     </li>
                                     <li><a><i class="fa fa-desktop"></i> 分析 <span class="fa fa-chevron-down"></span></a>
