Create oath function

--- a/accounts/templates/oauth_form.html
+++ b/accounts/templates/oauth_form.html
@@ -28,15 +28,15 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="access_key">AccessKey </label>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="access_token">AccessKey </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                            {{ form.access_key }}
+                            {{ form.access_token }}
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="access_key_secret">AccessKeySecret </label>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="access_token_secret">AccessKeySecret </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                            {{ form.access_key_secret }}
+                            {{ form.access_token_secret }}
                         </div>
                     </div>
                     <div class="form-group">
