--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -18,7 +18,7 @@
         <div class="login_wrapper">
             <div class="animate form login_form">
                 <section class="login_content">
-                    <form action="{% url 'login' %}" method="post">{% csrf_token %}
+                    <form action="" method="post">{% csrf_token %}
                         <h1>Login Form</h1>
                         <div>
                             <input type="text" class="form-control" placeholder="username" name="username" required>
