--- a/tweet_analysis/templates/base.html
+++ b/tweet_analysis/templates/base.html
@@ -69,10 +69,10 @@
                         <!-- /menu footer buttons -->
                         <div class="sidebar-footer hidden-small">
                             <a data-toggle="tooltip" data-placement="top" title="Settings">
-                                <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+                                <span class="glyphicon glyphicon-cog" aria-hidden="true" ></span>
                             </a>
-                            <a data-toggle="tooltip" data-placement="top" title="FullScreen">
-                                <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
+                            <a data-toggle="tooltip" data-placement="top" title="Logout" href="{% url 'logout' %}">
+                                <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
                             </a>
                         </div>
                         <!-- /menu footer buttons -->
