--- a/tweet_analysis/templates/base.html
+++ b/tweet_analysis/templates/base.html
@@ -41,7 +41,7 @@
                                     <li><a href="{% url 'index' %}"><i class="fa fa-home"></i> ホーム </a></li>
                                     <li><a><i class="fa fa-user"></i> アカウント <span class="fa fa-chevron-down"></span></a>
                                         <ul class="nav child_menu">
-                                            <li><a href="#">ユーザ登録</a></li>
+                                            <li><a href="{% url 'user_add' %}">ユーザ登録</a></li>
                                             <li><a href="{% url 'account_add' %}">Twitterアカウント登録</a></li>
                                             <li><a href="{% url 'oath_add' %}">認証キー登録</a></li>
                                         </ul>
