--- a/tweet_analysis/templates/base.html
+++ b/tweet_analysis/templates/base.html
@@ -48,7 +48,7 @@
                                     </li>
                                     <li><a><i class="fa fa-desktop"></i> 分析 <span class="fa fa-chevron-down"></span></a>
                                         <ul class="nav child_menu">
-                                            <li><a href="#">共通フォロー分析</a></li>
+                                            <li><a href="{% url 'common_follow_form' %}">共通フォロー分析</a></li>
                                             <li><a href="#">共通RT分析</a></li>
                                             <li><a href="#">共通ファボ分析</a></li>
                                         </ul>
