Create common rt form

--- a/tweet_analysis/templates/base.html
+++ b/tweet_analysis/templates/base.html
@@ -49,7 +49,7 @@
                                     <li><a><i class="fa fa-desktop"></i> 分析 <span class="fa fa-chevron-down"></span></a>
                                         <ul class="nav child_menu">
                                             <li><a href="{% url 'common_follow_form' %}">共通フォロー分析</a></li>
-                                            <li><a href="#">共通RT分析</a></li>
+                                            <li><a href="{% url 'common_rt_form' %}">共通RT分析</a></li>
                                             <li><a href="{% url 'common_fav_form' %}">共通ファボ分析</a></li>
                                         </ul>
                                     </li>
