--- a/analysis/templates/index.html
+++ b/analysis/templates/index.html
@@ -44,6 +44,7 @@
                 <h3>TwitterAPI認証キー <small>使用されるキー</small></h3>
             </div>
             <div class="x_content">
+                {% if oath_key %}
                 <div class="col-md-9 col-sm-9 col-xs-12">
                     <table class="table table-bordered">
                         <thead>
@@ -76,6 +77,9 @@
                         </tbody>
                     </table>
                 </div>
+                {% else %}
+                <p>未登録</p>
+                {% endif %}
             </div>
         </div>
     </div>
