数値入力フォーム追加

--- a/analysis/templates/common_follow_form.html
+++ b/analysis/templates/common_follow_form.html
@@ -21,6 +21,18 @@
                             {{ form.accounts }}
                         </div>
                     </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="common_count">最低共通人数 </label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                            {{ form.common_count }}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="follower_count">分析フォロワー数 </label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                            {{ form.follower_count }}
+                        </div>
+                    </div>
                     <div class="ln_solid"></div>
                     <div class="form-group">
                         <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-5">
