--- a/tweet_analysis/templates/base.html
+++ b/tweet_analysis/templates/base.html
@@ -53,6 +53,13 @@
                                             <li><a href="{% url 'common_fav_form' %}">共通ファボ分析</a></li>
                                         </ul>
                                     </li>
+                                    <li><a><i class="fa fa-bar-chart"></i> 分析結果 <span class="fa fa-chevron-down"></span></a>
+                                        <ul class="nav child_menu">
+                                            <li><a href="#">共通フォロー分析</a></li>
+                                            <li><a href="#">共通RT分析</a></li>
+                                            <li><a href="#">共通ファボ分析</a></li>
+                                        </ul>
+                                    </li>
                                 </ul>
                             </div>
                             <div class="menu_section">
