--- a/tweet_analysis/templates/base.html
+++ b/tweet_analysis/templates/base.html
@@ -55,7 +55,7 @@
                                     </li>
                                     <li><a><i class="fa fa-bar-chart"></i> 分析結果 <span class="fa fa-chevron-down"></span></a>
                                         <ul class="nav child_menu">
-                                            <li><a href="#">共通フォロー分析</a></li>
+                                            <li><a href="{% url 'common_follow_result' %}">共通フォロー分析</a></li>
                                             <li><a href="#">共通RT分析</a></li>
                                             <li><a href="#">共通ファボ分析</a></li>
                                         </ul>
