カラム名変更

--- a/analysis/templates/common_follow_result_detail.html
+++ b/analysis/templates/common_follow_result_detail.html
@@ -33,7 +33,7 @@
                             <td>{{ record.common_count }}</td>
                             <td>{{ record.followers_count }}</td>
                             <td>{{ record.follow_rate }}</td>
-                            <td>{{ record.follow_ratio }}</td>
+                            <td>{{ record.follower_ratio }}</td>
                             <td>{{ record.factor }}</td>
                         </tr>
                         {% endfor %}
