テンプレ修正

--- a/analysis/templates/common_analysis_form.html
+++ b/analysis/templates/common_analysis_form.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="page-title">
     <div class="title_left">
-        <h3>共通フォロー分析</h3>
+        <h3>{{ title }}</h3>
     </div>
 </div>
 <div class="row">
