--- a/analysis/templates/common_analysis_form.html
+++ b/analysis/templates/common_analysis_form.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="page-title">
     <div class="title_left">
-        <h3>{{ title }}</h3>
+        <h3>共通{{ category }}分析</h3>
     </div>
 </div>
 <div class="row">
@@ -22,7 +22,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="common_count">最低共通人数 </label>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="common_count">最低共通{{ category }}数 </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
                             {{ form.common_count }}
                         </div>
