ファボ分析結果追加

--- a/tweet_analysis/templates/base.html
+++ b/tweet_analysis/templates/base.html
@@ -57,7 +57,7 @@
                                         <ul class="nav child_menu">
                                             <li><a href="{% url 'common_follow_result' %}">共通フォロー分析</a></li>
                                             <li><a href="#">共通RT分析</a></li>
-                                            <li><a href="#">共通ファボ分析</a></li>
+                                            <li><a href="{% url 'common_fav_result' %}">共通ファボ分析</a></li>
                                         </ul>
                                     </li>
                                 </ul>
