--- a/analysis/templates/common_fav_result_detail.html
+++ b/analysis/templates/common_fav_result_detail.html
@@ -19,11 +19,7 @@
                         <tr>
                             <th>UserName</th>
                             <th>共通カウント</th>
-                            <th>フォロワー数</th>
-                            <th>フォロー率</th>
-                            <th>フォロワー比</th>
-                            <th>factor</th>
-
+                            <th>ツイート</th>
                         </tr>
                         </thead>
                         <tbody>
@@ -31,10 +27,7 @@
                         <tr>
                             <td>{{ record.username }}</td>
                             <td>{{ record.common_count }}</td>
-                            <td>{{ record.followers_count }}</td>
-                            <td>{{ record.follow_rate }}</td>
-                            <td>{{ record.follower_ratio }}</td>
-                            <td>{{ record.factor }}</td>
+                            <td>{{ record.text }}</td>
                         </tr>
                         {% endfor %}
                         </tbody>
