--- a/analysis/templates/result.html
+++ b/analysis/templates/result.html
@@ -13,7 +13,7 @@
                 <h3>{{ title }}</h3>
             </div>
             <div class="x_content">
-                <div class="col-md-9 col-sm-9 col-xs-12">
+                <div class="col-md-12 col-sm-12 col-xs-12">
                     <table class="table table-hover">
                         <thead>
                         <tr>
@@ -28,9 +28,15 @@
                             <td>{{ record.account }}</td>
                             <td>{{ record.user }}</td>
                             <td>
+                                {% if record.category == category.common_follow %}
                                 <a href="{% url 'common_follow_result_detail' record.pk %}" style="width:100%; height:100%; display:block;">
                                     {{ record.created_at }}
                                 </a>
+                                {% elif record.category == category.common_fav %}
+                                <a href="{% url 'common_fav_result_detail' record.pk %}" style="width:100%; height:100%; display:block;">
+                                    {{ record.created_at }}
+                                </a>
+                                {% endif %}
                             </td>
                         </tr>
                         {% endfor %}
