--- a/tweet_analysis/templates/base.html
+++ b/tweet_analysis/templates/base.html
@@ -65,7 +65,7 @@
                             <div class="menu_section">
                                 <h3>Link</h3>
                                 <ul class="nav side-menu">
-                                    <li><a href="#" target="_blank"><i class="fa fa-github"></i> GitHub </a></li>
+                                    <li><a href="https://github.com/k-murata08/tweet_analysis_app" target="_blank"><i class="fa fa-github"></i> GitHub </a></li>
                                     <li><a href="https://lab.syncer.jp/Tool/Twitter-ID-Checker/" target="_blank"><i class="fa fa-link"></i> IDチェッカー </a></li>
                                     <li><a href="https://syncer.jp/Web/API/Twitter/REST_API/" target="_blank"><i class="fa fa-twitter"></i> Twitter API </a></li>
                                 </ul>
