--- a/tweet_analysis/templates/base.html
+++ b/tweet_analysis/templates/base.html
@@ -27,11 +27,11 @@
                         <div class="profile clearfix">
                             <div class="profile_info">
                                 <span>Welcome,</span>
-                                <h2>Murata</h2>
+                                <h2>{{ request.user.username }}</h2>
                             </div>
                         </div>
                         <!-- /menu profile quick info -->
-                        <br />
+                        <br/>
 
                         <!-- sidebar menu -->
                         <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
