共通RT分析結果実装

--- a/tweet_analysis/templates/base.html
+++ b/tweet_analysis/templates/base.html
@@ -56,7 +56,7 @@
                                     <li><a><i class="fa fa-bar-chart"></i> 分析結果 <span class="fa fa-chevron-down"></span></a>
                                         <ul class="nav child_menu">
                                             <li><a href="{% url 'common_follow_result' %}">共通フォロー分析</a></li>
-                                            <li><a href="#">共通RT分析</a></li>
+                                            <li><a href="{% url 'common_rt_result' %}">共通RT分析</a></li>
                                             <li><a href="{% url 'common_fav_result' %}">共通ファボ分析</a></li>
                                         </ul>
                                     </li>
