--- a/analysis/templates/result.html
+++ b/analysis/templates/result.html
@@ -36,6 +36,10 @@
                                 <a href="{% url 'common_fav_result_detail' record.pk %}" style="width:100%; height:100%; display:block;">
                                     {{ record.created_at }}
                                 </a>
+                                {% else %}
+                                <a href="{% url 'common_rt_result_detail' record.pk %}" style="width:100%; height:100%; display:block;">
+                                    {{ record.created_at }}
+                                </a>
                                 {% endif %}
                             </td>
                         </tr>
