user_roleでの制御を追加

--- a/analysis/templates/index.html
+++ b/analysis/templates/index.html
@@ -105,7 +105,7 @@
                         <tr>
                             <td>{{ user.id }}</td>
                             <td>{{ user.username }}</td>
-                            {% if user.profile.role == 2 %}
+                            {% if user.profile.role == user_roles.general %}
                             <td>general</td>
                             {% else %}
                             <td>admin</td>
