--- a/analysis/templates/result.html
+++ b/analysis/templates/result.html
@@ -10,7 +10,7 @@
     <div class="col-md-12 col-sm-12 col-xs-12">
         <div class="x_panel">
             <div class="x_title">
-                <h3>{{ title }}</h3>
+                <h3>共通{{ category_name }}分析</h3>
             </div>
             <div class="x_content">
                 <div class="col-md-12 col-sm-12 col-xs-12">
@@ -19,6 +19,8 @@
                         <tr>
                             <th>Account</th>
                             <th>User</th>
+                            <th>分析フォロワー数</th>
+                            <th>最小共通{{ category_name }}数</th>
                             <th>Date</th>
                         </tr>
                         </thead>
@@ -27,6 +29,8 @@
                         <tr>
                             <td>{{ record.account }}</td>
                             <td>{{ record.user }}</td>
+                            <td>{{ record.follower_count }}</td>
+                            <td>{{ record.min_common_count }}</td>
                             <td>
                                 {% if record.category == category.common_follow %}
                                 <a href="{% url 'common_follow_result_detail' record.pk %}" style="width:100%; height:100%; display:block;">
