タスク表示

--- a/analysis/templates/index.html
+++ b/analysis/templates/index.html
@@ -10,6 +10,37 @@
     <div class="col-md-12 col-sm-12 col-xs-12">
         <div class="x_panel">
             <div class="x_title">
+                <h3>実行中のタスク <small>バックグラウンド</small></h3>
+            </div>
+            <div class="x_content">
+                <div class="col-md-9 col-sm-9 col-xs-12">
+                    <table class="table table-bordered">
+                        <thead>
+                        <tr>
+                            <th>TaskName</th>
+                            <th>RunAt</th>
+                            <th>TaskParams</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for task in tasks %}
+                        <tr>
+                            <td>{{ task.name }}</td>
+                            <td>{{ task.run_at }}</td>
+                            <td>{{ task.task_params }}</td>
+                        </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12 col-sm-12 col-xs-12">
+        <div class="x_panel">
+            <div class="x_title">
                 <h3>アカウントリスト <small>登録済みアカウント</small></h3>
             </div>
             <div class="x_content">
