Add csv downloader

--- a/analysis/templates/common_follow_result_detail.html
+++ b/analysis/templates/common_follow_result_detail.html
@@ -14,7 +14,7 @@
             </div>
             <div class="x_content">
                 <div class="col-md-12 col-sm-12 col-xs-12">
-                    <table class="table table-bordered">
+                    <table id="common_follow" class="table table-bordered csv_table">
                         <thead>
                         <tr>
                             <th>UserName</th>
