--- a/tweet_analysis/templates/base.html
+++ b/tweet_analysis/templates/base.html
@@ -103,6 +103,8 @@
         </div>
         <script src="{% static 'vendors/jquery/dist/jquery.min.js' %}"></script>
         <script src="{% static 'vendors/bootstrap/dist/js/bootstrap.min.js' %}"></script>
+        <script src="{% static 'js/table2csv.js' %}"></script>
         <script src="{% static 'js/custom.js' %}"></script>
+        <script src="{% static 'js/app.js' %}"></script>
     </body>
 </html>
