リストの出しわけ

--- a/analysis/templates/index.html
+++ b/analysis/templates/index.html
@@ -68,6 +68,8 @@
         </div>
     </div>
 </div>
+
+{% if user.profile.role == user_roles.admin %}
 <div class="row">
     <div class="col-md-12 col-sm-12 col-xs-12">
         <div class="x_panel">
@@ -150,6 +152,7 @@
         </div>
     </div>
 </div>
+{% endif %}
 
 <br />
 <!-- /page content -->
