スクリーンネームとtwitterリンクの追加

--- a/accounts/templates/account_form_confirm.html
+++ b/accounts/templates/account_form_confirm.html
@@ -18,6 +18,7 @@
                     <img width="100" src="{{ image_url }}">
                     <div style="margin-top: 10px;">
                         <h5>ID: {{ twitter_id }}</h5>
+                        <h5>スクリーンネーム: {{ screen_name }}</h5>
                         <h5>アカウント名: {{ name }}</h5>
                     </div>
                 </div>
